--- a/frontendjs/src/pages/Odontogram/Odontogram.scss
+++ b/frontendjs/src/pages/Odontogram/Odontogram.scss
@@ -1,6 +1,4 @@
-.kontainer-all {
-    margin-top: 200px;
-
+.page-odontogram {
     .kontainer-all-gigi {
         $scale: 0.5;
 
@@ -66,10 +64,10 @@
                 left: calc(17px * #{$scale});
                 top: calc(15px * #{$scale});
                 border: calc(2px * #{$scale}) solid black;
-                background: red;
+                background: #ffffff;
                 &:hover {
                     cursor: pointer;
-                    filter: opacity(0.5);
+                    background-color: #aed3dc;
                 }
             }
 
@@ -82,7 +80,7 @@
                 .gigi-bawah {
                     width: calc(50px * #{$scale});
                     height: calc(20px * #{$scale});
-                    background: red;
+                    background: #ffffff;
                     transform: perspective(10px)
                         rotateX(calc(21deg / #{$scale}));
                     border-top: calc(4px * #{$scale}) solid black;
@@ -92,7 +90,7 @@
 
                     &:hover {
                         cursor: pointer;
-                        filter: opacity(0.5);
+                        background-color: #aed3dc;
                     }
                 }
             }
@@ -105,7 +103,7 @@
                 .gigi-kanan {
                     width: calc(50px * #{$scale});
                     height: calc(20px * #{$scale});
-                    background: red;
+                    background: #ffffff;
                     transform: perspective(10px)
                         rotateX(calc(21deg / #{$scale}));
                     border-top: calc(4px * #{$scale}) solid black;
@@ -116,7 +114,7 @@
 
                     &:hover {
                         cursor: pointer;
-                        filter: opacity(0.5);
+                        background-color: #aed3dc;
                     }
                 }
             }
@@ -129,7 +127,7 @@
                 .gigi-atas {
                     width: calc(50px * #{$scale});
                     height: calc(20px * #{$scale});
-                    background: red;
+                    background: #ffffff;
                     transform: perspective(10px)
                         rotateX(calc(21deg / #{$scale}));
                     border-top: calc(4px * #{$scale}) solid black;
@@ -139,7 +137,7 @@
                     rotate: -180deg;
                     &:hover {
                         cursor: pointer;
-                        filter: opacity(0.5);
+                        background-color: #aed3dc;
                     }
                 }
             }
@@ -153,7 +151,7 @@
                 .gigi-kiri {
                     width: calc(50px * #{$scale});
                     height: calc(20px * #{$scale});
-                    background: red;
+                    background: #ffffff;
                     transform: perspective(10px)
                         rotateX(calc(21deg / #{$scale}));
                     border-top: calc(4px * #{$scale}) solid black;
@@ -164,7 +162,7 @@
 
                     &:hover {
                         cursor: pointer;
-                        filter: opacity(0.5);
+                        background-color: #aed3dc;
                     }
                 }
             }
@@ -189,10 +187,10 @@
                 left: calc(17px * #{$scale});
                 top: calc(15px * #{$scale});
                 border: calc(2px * #{$scale}) solid black;
-                background: red;
+                background: #ffffff;
                 &:hover {
                     cursor: pointer;
-                    filter: opacity(0.5);
+                    background-color: #aed3dc;
                 }
             }
 
@@ -206,7 +204,7 @@
                 .gigi-bawah {
                     width: calc(50px * #{$scale});
                     height: calc(30px * #{$scale});
-                    background: red;
+                    background: #ffffff;
                     transform: perspective(11px)
                         rotateX(calc(14deg / #{$scale}));
                     border-top: calc(4px * #{$scale}) solid black;
@@ -216,7 +214,7 @@
 
                     &:hover {
                         cursor: pointer;
-                        filter: opacity(0.5);
+                        background-color: #aed3dc;
                     }
                 }
             }
@@ -229,7 +227,7 @@
                 .gigi-kanan {
                     width: calc(50px * #{$scale});
                     height: calc(20px * #{$scale});
-                    background: red;
+                    background: #ffffff;
                     transform: perspective(10px)
                         rotateX(calc(21deg / #{$scale}));
                     border-top: calc(4px * #{$scale}) solid black;
@@ -240,7 +238,7 @@
 
                     &:hover {
                         cursor: pointer;
-                        filter: opacity(0.5);
+                        background-color: #aed3dc;
                     }
                 }
             }
@@ -255,7 +253,7 @@
                 .gigi-atas {
                     width: calc(50px * #{$scale});
                     height: calc(30px * #{$scale});
-                    background: red;
+                    background: #ffffff;
                     transform: perspective(11px)
                         rotateX(calc(14deg / #{$scale}));
                     border-top: calc(4px * #{$scale}) solid black;
@@ -265,7 +263,7 @@
                     rotate: -180deg;
                     &:hover {
                         cursor: pointer;
-                        filter: opacity(0.5);
+                        background-color: #aed3dc;
                     }
                 }
             }
@@ -279,7 +277,7 @@
                 .gigi-kiri {
                     width: calc(50px * #{$scale});
                     height: calc(20px * #{$scale});
-                    background: red;
+                    background: #ffffff;
                     transform: perspective(10px)
                         rotateX(calc(21deg / #{$scale}));
                     border-top: calc(4px * #{$scale}) solid black;
@@ -290,10 +288,39 @@
 
                     &:hover {
                         cursor: pointer;
-                        filter: opacity(0.5);
+                        background-color: #aed3dc;
                     }
                 }
             }
+        }
+    }
+
+    .card-pilihan {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        min-height: 50px;
+        justify-content: space-between;
+        margin-bottom: 20px;
+        border-radius: 5px;
+        overflow: hidden;
+        box-shadow:
+            0 4px 8px 0 #00000033,
+            0 6px 20px 0 #00000030;
+        &:hover {
+            cursor: pointer;
+            background-color: #0000000d;
+        }
+
+        .isi-label {
+            padding: 5px;
+            margin: 0;
+            width: calc(100% - 70px);
+        }
+
+        .isi-gbr {
+            width: 50px;
+            height: 50px;
         }
     }
 }
