--- a/frontendjs/src/pages/Odontogram/Odontogram.scss
+++ b/frontendjs/src/pages/Odontogram/Odontogram.scss
@@ -364,6 +364,9 @@
         .isi-gbr {
             width: 50px;
             height: 50px;
+            margin: 0;
+            display: flex;
+            align-items: center;
         }
     }
 }
