--- a/frontendjs/src/App.scss
+++ b/frontendjs/src/App.scss
@@ -56,7 +56,7 @@
 }
 
 .card-header-snb {
-    background-color: #ffcb46;
+    background-color: #17a2b8;
     border-top-left-radius: 15px !important;
     border-top-right-radius: 15px !important;
     padding: 10px 15px;
