--- a/frontendjs/src/assets/scss/config/modern/_variables.scss
+++ b/frontendjs/src/assets/scss/config/modern/_variables.scss
@@ -669,7 +669,7 @@ $border-color: var(--#{$prefix}border-color);
 // scss-docs-end border-variables
 
 // scss-docs-start border-radius-variables
-$border-radius: 0.25rem;
+$border-radius: 1.0rem;//0.25rem
 $border-radius-sm: 0.2rem;
 $border-radius-lg: 0.3rem;
 $border-radius-xl: 1rem;
@@ -1451,7 +1451,7 @@ $card-spacer-x: $spacer;
 $card-title-spacer-y: $spacer * 0.5;
 $card-border-width: 0;
 $card-border-color: rgba($black, 0.125);
-$card-border-radius: $border-radius;
+$card-border-radius: 20px !important;
 $card-box-shadow: $box-shadow;
 $card-inner-border-radius: subtract($card-border-radius, $card-border-width);
 $card-cap-padding-y: $card-spacer-y;
