--- a/frontendjs/src/pages/ViewerBed/ViewerBed.scss
+++ b/frontendjs/src/pages/ViewerBed/ViewerBed.scss
@@ -122,51 +122,6 @@
                             }
                         }
                     }
-
-                    .body-table {
-                        width: 100%;
-                        height: calc(100% - (100% / 11));
-                        overflow-y: scroll;
-                        -ms-overflow-style: none; /* IE and Edge */
-                        scrollbar-width: none; /* Firefox */
-                        &::-webkit-scrollbar {
-                            display: none;
-                        }
-
-                        .bg-genap {
-                            background-color: rgb(211, 211, 211);
-                        }
-                        .batch-kontainer-data-kelas-table {
-                            height: calc(100vh - 320px);
-
-                            .row-bed {
-                                height: calc(100% / 10);
-                                display: flex;
-                                padding: 5px;
-
-                                p {
-                                    margin: 0;
-                                }
-                                .kontainer-data-ruangan {
-                                    display: flex;
-                                    align-items: center;
-                                    height: 100%;
-                                    width: 20%;
-                                }
-
-                                .kontainer-data-kelas-table {
-                                    display: flex;
-                                    align-items: center;
-                                    height: 100%;
-                                    width: calc(80% / 7);
-                                    justify-content: center;
-                                    p {
-                                        text-align: center;
-                                    }
-                                }
-                            }
-                        }
-                    }
                 }
 
                 .legend {
@@ -211,70 +166,108 @@
                 width: 380px;
                 height: calc(100%);
 
-                .kontainer-isi-kelas {
-                    height: calc(100vh - 200px);
-                    width: 380px;
-                    .kontainer-kelas {
-                        display: flex;
-                        flex-direction: column;
-                        align-items: center;
-                        width: 100%;
-                        height: 22%;
-                        margin-bottom: 20px;
+                .kontainer-kelas {
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    width: 100%;
+                    height: 22%;
+                    margin-bottom: 20px;
 
-                        .judul-kelas {
-                            color: #f5f6f7;
-                            width: 100%;
-                            background-color: #153e90;
-                            text-align: center;
-                            height: 30px;
-                            font-size: 20px;
-                            margin: 0;
-                            border-top-left-radius: 10px;
-                            border-top-right-radius: 10px;
+                    .judul-kelas {
+                        color: #f5f6f7;
+                        width: 100%;
+                        background-color: #153e90;
+                        text-align: center;
+                        height: 30px;
+                        font-size: 20px;
+                        margin: 0;
+                        border-top-left-radius: 10px;
+                        border-top-right-radius: 10px;
+                    }
+
+                    .bed {
+                        display: flex;
+                        flex-direction: row;
+                        align-items: center;
+                        height: calc(90px);
+                        width: 100%;
+
+                        .kontainer-bed {
+                            width: 50%;
+                            height: 100%;
+                            background-color: #187498;
+                            border-bottom-left-radius: 10px;
+                            .jumlah-bed {
+                                color: #fff;
+                                text-align: center;
+                                font-family: Poppins;
+                                font-size: 8vh;
+                                font-style: normal;
+                                font-weight: 500;
+                                line-height: normal;
+                            }
                         }
 
-                        .bed {
-                            display: flex;
-                            flex-direction: row;
-                            align-items: center;
-                            height: calc(100% - 30px);
-                            width: 100%;
-
-                            .kontainer-bed {
-                                width: 50%;
-                                height: 100%;
-                                background-color: #187498;
-                                border-bottom-left-radius: 10px;
-                                .jumlah-bed {
-                                    color: #fff;
-                                    text-align: center;
-                                    font-family: Poppins;
-                                    font-size: 8vh;
-                                    font-style: normal;
-                                    font-weight: 500;
-                                    line-height: normal;
-                                }
-                            }
-
-                            .kontainer-sisa {
-                                width: 50%;
-                                height: 100%;
-                                background-color: #36ae7c;
-                                border-bottom-right-radius: 10px;
-                                .tersisa {
-                                    color: #fff;
-                                    text-align: center;
-                                    font-family: Poppins;
-                                    font-size: 8vh;
-                                    font-style: normal;
-                                    font-weight: 500;
-                                    line-height: normal;
-                                }
+                        .kontainer-sisa {
+                            width: 50%;
+                            height: 100%;
+                            background-color: #36ae7c;
+                            border-bottom-right-radius: 10px;
+                            .tersisa {
+                                color: #fff;
+                                text-align: center;
+                                font-family: Poppins;
+                                font-size: 8vh;
+                                font-style: normal;
+                                font-weight: 500;
+                                line-height: normal;
                             }
                         }
                     }
                 }
+            }
+        }
+    }
+}
+
+.body-table-kontainer-viewer {
+    width: 100%;
+    overflow-y: hidden;
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+    position: relative;
+    &::-webkit-scrollbar {
+        display: none;
+    }
+
+    .position-child {
+        position: absolute;
+    }
+
+    .row-tick {
+        width: 100%;
+        display: flex;
+        padding: 5px;
+
+        p {
+            margin: 0;
+        }
+        .kontainer-data-ruangan {
+            display: flex;
+            align-items: center;
+            height: 100%;
+            width: 20%;
+        }
+
+        .kontainer-data-kelas-table {
+            display: flex;
+            align-items: center;
+            height: 100%;
+            width: calc(80% / 7);
+            justify-content: center;
+            p {
+                text-align: center;
             }
         }
     }
