--- a/daftarmandiri/src/pages/BeritaPage/BeritaPage.scss
+++ b/daftarmandiri/src/pages/BeritaPage/BeritaPage.scss
@@ -21,7 +21,7 @@
         p {
             font-size: 14px;
             font-weight: 600;
-            color: #564405;
+            color: var(--yellow-900);
             margin-top: 10px;
             text-align: left;
         }
