--- a/daftarmandiri/src/pages/LupaPasswordPage/LupaPasswordPage.scss
+++ b/daftarmandiri/src/pages/LupaPasswordPage/LupaPasswordPage.scss
@@ -17,7 +17,7 @@
             width: 40px;
             height: 40px;
             position: absolute;
-            background-color: #cda30b;
+            background-color: var(--yellow-600);
             border-radius: 20px;
         }
     }
