--- a/daftarmandiri/src/Components/InputGroupDM/InputGroupDM.scss
+++ b/daftarmandiri/src/Components/InputGroupDM/InputGroupDM.scss
@@ -8,7 +8,7 @@
     .label-dm {
         font-size: 14px;
         font-weight: 600;
-        color: #564405;
+        color: var(--yellow-900);
         margin-bottom: 8px;
     }
 }
