--- a/daftarmandiri/src/pages/AntreanOnlinePage/AntreanOnlinePage.scss
+++ b/daftarmandiri/src/pages/AntreanOnlinePage/AntreanOnlinePage.scss
@@ -16,7 +16,7 @@
         }
 
         .teks-belum-ada {
-            color: #715a06;
+            color: var(--yellow-800);
             text-align: center;
             font-size: 18px;
             font-style: normal;
@@ -30,15 +30,15 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            background-color: #e8d58f;
+            background-color: var(--yellow-200);
             width: 100%;
             padding: 15px;
             border-radius: 15px;
-            border-top: 3px dashed #faf6e7;
-            border-bottom: 3px dashed #faf6e7;
+            border-top: 3px dashed var(--yellow-100);
+            border-bottom: 3px dashed var(--yellow-100);
 
             .sekarang {
-                color: #715a06;
+                color: var(--yellow-800);
                 text-align: center;
                 font-size: 18px;
                 font-style: normal;
@@ -48,7 +48,7 @@
             }
 
             .antrean {
-                color: #715a06;
+                color: var(--yellow-800);
                 text-align: center;
                 font-size: 81px;
                 font-style: normal;
@@ -62,7 +62,7 @@
             display: flex;
             flex-direction: row;
             align-items: center;
-            background-color: #e8d58f;
+            background-color: var(--yellow-200);
             width: 100%;
             padding: 15px;
             border-radius: 15px;
