--- a/daftarmandiri/src/pages/DetailPendaftaran/DetailPendaftaran.scss
+++ b/daftarmandiri/src/pages/DetailPendaftaran/DetailPendaftaran.scss
@@ -13,7 +13,7 @@
         flex-direction: column;
         align-items: center;
         border-radius: 15px;
-        border: 3px solid #564405;
+        border: 3px solid var(--yellow-900);
         padding: 20px;
         .judul-pasien {
             font-size: 12px;
@@ -45,7 +45,7 @@
     .kontainer-loket {
         width: 100%;
         padding: 20px;
-        border: 3px solid #564405;
+        border: 3px solid var(--yellow-900);
         border-radius: 15px;
         margin-top: 12px;
 
