--- a/daftarmandiri/src/pages/Login/PasienBaru.scss
+++ b/daftarmandiri/src/pages/Login/PasienBaru.scss
@@ -35,7 +35,7 @@
         .label-login {
             font-size: 14px;
             font-weight: 600;
-            color: #564405;
+            color: var(--yellow-900);
             margin-bottom: 8px;
         }
 
