--- a/daftarmandiri/src/pages/PenjaminPage/PenjaminPage.scss
+++ b/daftarmandiri/src/pages/PenjaminPage/PenjaminPage.scss
@@ -62,7 +62,7 @@
                         display: flex;
                         flex-direction: row;
                         align-items: center;
-                        background-color: #e8d58f;
+                        background-color: var(--yellow-200);
                         width: 100%;
                         padding: 8px 12px;
                         border-radius: 15px;
@@ -77,7 +77,7 @@
                         .teks-rekanan {
                             width: calc(100% - 68px);
                             p {
-                                color: #564405;
+                                color: var(--yellow-900);
                                 font-size: 16px;
                                 font-style: normal;
                                 font-weight: 500;
@@ -98,7 +98,7 @@
                         overflow: hidden;
                         transition: all 0.3s ease-in-out;
                         background-color: #fdfdfd;
-                        border: 1px solid #e8d58f;
+                        border: 1px solid var(--yellow-200);
                         padding: 14px;
                         border-radius: 10px;
                         .tbl {
@@ -122,7 +122,7 @@
 .modal-pilih-penjamin {
     border-radius: 20px;
     .konten-modal {
-        background-color: #faf6e7;
+        background-color: var(--yellow-100);
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -141,7 +141,7 @@
             label {
                 font-size: 12px;
                 font-weight: 400;
-                color: #564405;
+                color: var(--yellow-900);
             }
         }
 
