--- a/daftarmandiri/src/pages/TempatTidurPage/TempatTidurPage.scss
+++ b/daftarmandiri/src/pages/TempatTidurPage/TempatTidurPage.scss
@@ -11,7 +11,7 @@
             flex-direction: row;
             height: 60px;
             align-items: center;
-            background-color: #e8d58f;
+            background-color: #{var(--yellow-200)};
             border-radius: 10px;
             overflow: hidden;
 
@@ -23,7 +23,7 @@
             }
 
             .legend-jumlah {
-                background-color: #d7b53c;
+                background-color: var(--yellow-500);
             }
             .legend-tersedia {
                 background-color: #bb940a;
@@ -36,7 +36,7 @@
                 margin: 0;
                 font-size: 15px;
                 font-weight: 700;
-                color: #564405;
+                color: var(--yellow-900);
             }
         }
     }
@@ -45,10 +45,10 @@
         margin-top: 10px;
         display: flex;
         flex-direction: column;
-        background-color: #e8d58f;
+        background-color: var(--yellow-200);
         border-radius: 10px;
         overflow: hidden;
-        color: #564405;
+        color: var(--yellow-900);
 
         .isi-kelas {
             text-align: center;
@@ -77,7 +77,7 @@
                 }
             }
             .jumlah-bed {
-                background-color: #d7b53c;
+                background-color: var(--yellow-500);
             }
             .bed-tersedia {
                 background-color: #bb940a;
