--- a/daftarmandiri/src/assets/_variables.scss
+++ b/daftarmandiri/src/assets/_variables.scss
@@ -11,13 +11,13 @@ $yellow-900: #564405;
 $black: #000;
 
 :root {
-    --yellow-100: #faf6e7;
-    --yellow-200: #f0e2b3;
-    --yellow-300: #e8d58f;
-    --yellow-400: #dec15c;
-    --yellow-500: #d7b53c;
-    --yellow-600: #cda30b;
-    --yellow-700: #927408;
-    --yellow-800: #715a06;
-    --yellow-900: #564405;
+    --yellow-100: #{$yellow-100};
+    --yellow-200: #{$yellow-200};
+    --yellow-300: #{$yellow-300};
+    --yellow-400: #{$yellow-400};
+    --yellow-500: #{$yellow-500};
+    --yellow-600: #{$yellow-600};
+    --yellow-700: #{$yellow-700};
+    --yellow-800: #{$yellow-800};
+    --yellow-900: #{$yellow-900};
 }
