--- a/daftarmandiri/src/assets/_variables.scss
+++ b/daftarmandiri/src/assets/_variables.scss
@@ -11,13 +11,13 @@ $yellow-900: #564405;
 $black: #000;
 
 :root {
-    --yellow-100: #{$yellow-100};
-    --yellow-200: #{$yellow-200};
-    --yellow-300: #{$yellow-300};
-    --yellow-400: #{$yellow-400};
-    --yellow-500: #{$yellow-500};
-    --yellow-600: #{$yellow-600};
-    --yellow-700: #{$yellow-700};
-    --yellow-800: #{$yellow-800};
-    --yellow-900: #{$yellow-900};
+    --main-100: #{$yellow-100};
+    --main-200: #{$yellow-200};
+    --main-300: #{$yellow-300};
+    --main-400: #{$yellow-400};
+    --main-500: #{$yellow-500};
+    --main-600: #{$yellow-600};
+    --main-700: #{$yellow-700};
+    --main-800: #{$yellow-800};
+    --main-900: #{$yellow-900};
 }
