--- a/daftarmandiri/src/pages/RiwayatPendaftaran/RiwayatPendaftaran.scss
+++ b/daftarmandiri/src/pages/RiwayatPendaftaran/RiwayatPendaftaran.scss
@@ -12,7 +12,7 @@
 
         .card-hari-ini {
             border-radius: 15px;
-            background-color: var(--yellow-300);
+            background-color: var(--main-300);
             width: 100%;
             padding: 20px 12px;
             margin-bottom: 12px;
@@ -76,7 +76,7 @@
 
         .card-sebelumnya {
             border-radius: 15px;
-            background-color: var(--yellow-300);
+            background-color: var(--main-300);
             width: 100%;
             padding: 20px 12px;
             margin-bottom: 12px;
