--- a/daftarmandiri/src/Components/InputDM/InputDM.scss
+++ b/daftarmandiri/src/Components/InputDM/InputDM.scss
@@ -5,7 +5,7 @@
 
     input {
         border-radius: 10px;
-        border: 1px solid var(--yellow-900);
+        border: 1px solid var(--main-900);
         background: #fdfdfd;
         width: 100%;
         height: 56px;
@@ -13,8 +13,8 @@
 
         &:focus {
             outline: none;
-            border: 1px solid var(--yellow-400);
-            outline: 1px solid var(--yellow-400);
+            border: 1px solid var(--main-400);
+            outline: 1px solid var(--main-400);
         }
     }
 
