--- a/daftarmandiri/src/Components/KontainerPage/KontainerPage.scss
+++ b/daftarmandiri/src/Components/KontainerPage/KontainerPage.scss
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: center;
     .kontainer-page {
-        background-color: var(--yellow-500);
+        background-color: var(--main-500);
         position: relative;
         width: 100%;
         height: 100%;
@@ -25,7 +25,7 @@
         }
         .kontainer-page-konten {
             border-radius: 20px 20px 0 0;
-            background-color: var(--yellow-100);
+            background-color: var(--main-100);
             padding: 30px;
             width: calc(100%);
             position: absolute;
