--- a/daftarmandiri/src/Components/ModalSelectDM/ModalSelectDM.scss
+++ b/daftarmandiri/src/Components/ModalSelectDM/ModalSelectDM.scss
@@ -2,7 +2,7 @@
     max-height: 300px;
     overflow-y: scroll;
     padding: 20px;
-    background-color: var(--yellow-100);
+    background-color: var(--main-100);
 
     .judul-select {
         font-size: 13px;
@@ -18,7 +18,7 @@
             font-size: 12px;
             font-weight: 400;
             margin-bottom: 10px;
-            border-bottom: 1px solid var(--yellow-700);
+            border-bottom: 1px solid var(--main-700);
             padding: 5px;
             border-radius: 5px;
             transition: all 0.3s ease-in-out;
@@ -26,7 +26,7 @@
 
         .active {
             background-color: #bb940a;
-            color: var(--yellow-100);
+            color: var(--main-100);
         }
     }
 }
