--- a/daftarmandiri/src/pages/DaftarPasienLama/DaftarPasienLama.scss
+++ b/daftarmandiri/src/pages/DaftarPasienLama/DaftarPasienLama.scss
@@ -22,7 +22,7 @@
             .teks {
                 font-size: 14px;
                 font-weight: 500;
-                color: var(--yellow-800);
+                color: var(--main-800);
                 position: absolute;
                 top: 50%;
                 left: 50%;
@@ -33,7 +33,7 @@
         .kontainer-header {
             display: flex;
             flex-direction: column;
-            color: var(--yellow-800);
+            color: var(--main-800);
             h2 {
                 font-size: 18px;
                 font-weight: 600;
