--- a/daftarmandiri/src/pages/Login/Login.scss
+++ b/daftarmandiri/src/pages/Login/Login.scss
@@ -28,7 +28,7 @@
             .teks {
                 font-size: 14px;
                 font-weight: 500;
-                color: var(--yellow-800);
+                color: var(--main-800);
                 position: absolute;
                 top: 50%;
                 left: 50%;
@@ -39,7 +39,7 @@
         .kontainer-header {
             display: flex;
             flex-direction: column;
-            color: var(--yellow-800);
+            color: var(--main-800);
             h2 {
                 font-size: 18px;
                 font-weight: 600;
@@ -56,7 +56,7 @@
         display: flex;
         flex-direction: row;
         margin-bottom: 28px;
-        background-color: var(--yellow-400);
+        background-color: var(--main-400);
         border-radius: 10px;
         position: relative;
 
@@ -66,7 +66,7 @@
             left: 8px;
             width: calc((100% / 2) - 16px);
             height: calc(100% - 10px);
-            background-color: var(--yellow-200);
+            background-color: var(--main-200);
             border-radius: 10px;
             z-index: 1;
             transition: all 200ms ease-in-out;
@@ -78,7 +78,7 @@
             padding: 15px;
             font-size: 14px;
             font-weight: 600;
-            color: var(--yellow-100);
+            color: var(--main-100);
             border: none;
             background-color: #00000000;
             z-index: 2;
@@ -111,7 +111,7 @@
         .label-login {
             font-size: 14px;
             font-weight: 600;
-            color: var(--yellow-900);
+            color: var(--main-900);
             margin-bottom: 8px;
         }
 
