--- a/daftarmandiri/src/pages/ResetPasswordPage/ResetPasswordPage.scss
+++ b/daftarmandiri/src/pages/ResetPasswordPage/ResetPasswordPage.scss
@@ -17,7 +17,7 @@
             width: 40px;
             height: 40px;
             position: absolute;
-            background-color: var(--yellow-600);
+            background-color: var(--main-600);
             border-radius: 20px;
         }
     }
