--- a/daftarmandiri/src/Components/ButtonDM/ButtonDM.scss
+++ b/daftarmandiri/src/Components/ButtonDM/ButtonDM.scss
@@ -12,17 +12,17 @@
     color: var(--main-100);
 
     &-secondary {
-        display: flex;
-        border: none;
-        flex-direction: row;
-        align-items: center;
-        padding: 18px;
-        border-radius: 10px;
-        font-size: 16px;
-        font-weight: 600;
-        justify-content: center;
         border: 1px solid var(--main-600);
-        background-color: #f7f7f7;
-        color: var(--main-600);
+        background-color: var(--main-white);
+    }
+
+    &-full-rounded {
+        //dummy
+        justify-content: center;
+        align-items: center;
+    }
+
+    &-fixed-wh {
+        padding: 0;
     }
 }
