--- a/daftarmandiri/src/Components/ButtonDM/ButtonDM.scss
+++ b/daftarmandiri/src/Components/ButtonDM/ButtonDM.scss
@@ -14,6 +14,7 @@
     &-secondary {
         border: 1px solid var(--main-600);
         background-color: var(--main-white);
+        color: var(--main-600);
     }
 
     &-full-rounded {
