--- a/daftarmandiri/src/pages/Home/HomePage.scss
+++ b/daftarmandiri/src/pages/Home/HomePage.scss
@@ -113,6 +113,7 @@
     flex-wrap: wrap;
     justify-content: space-between;
     margin-top: 20px;
+    justify-content: center;
     .isi-konten {
         display: flex;
         flex-direction: column;
@@ -128,15 +129,20 @@
             height: 40px;
         }
 
-        p {
-            font-size: 11px;
+        .kontainer-teks{
+            display: flex;
+            align-items: center;
             min-height: 33px;
-            font-weight: 600;
-            color: #fff;
-            margin-top: 10px;
-            text-align: center;
-            color: var(--main-900);
-            margin-bottom: 0;
+
+            p {
+                font-size: 11px;
+                font-weight: 600;
+                color: #fff;
+                text-align: center;
+                color: var(--main-900);
+                margin-bottom: 0;
+            }
         }
+
     }
 }
